[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "photoneo_camera_py"
version = "0.1.0"
description = "A Python package to interface with Photoneo cameras."
readme = "README.md"

authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = ["Photoneo", "camera", "pointcloud", "RGB", "depth", "texture", "normals"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "harvesters>=0.2.5",
    "numpy>=1.21.0",
    "genicam>=3.1.3",
    "open3d>=0.18.0",
    "open3d>=0.18.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://your.homepage.url"
Repository = "https://github.com/yourusername/photoneo_camera_py"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "flake8>=3.8",
    "black>=22.3.0"
]
